# l6claw

./: AGENTS.md  README.md  backup-title.json  package.json  title.json  turbo.json
.agents/skills/l6claw-browser-agent/: SKILL.md
.l6-specs/: 00-fork-setup.diff  00-fork-setup.md  01-remote-cli.diff  01-remote-cli.md  02-browser-agent-cli.diff  02-browser-agent-cli.md  l6-remote-cli.md
apps/desktop/: package.json
apps/desktop/scripts/: electron-launcher.mjs
apps/desktop/src/: appBranding.ts  backendConnection.test.ts  backendConnection.ts  main.ts
apps/server/: vitest.config.ts
apps/server/integration/: orchestrationEngine.integration.test.ts
apps/server/src/: cli-config.test.ts  cli.ts  config.ts  os-jank.ts  remoteApi.ts  remoteApiConfig.ts  server.test.ts  server.ts  serverRuntimeStartup.ts  serverSettings.ts  ws.ts
apps/server/src/orchestration/: Schemas.ts  commandInvariants.test.ts  decider.projectScripts.test.ts  decider.ts  projector.test.ts  projector.ts
apps/server/src/persistence/: ForkMigrations.ts  Migrations.ts
apps/web/: index.html
apps/web/src/: branding.ts  composerDraftStore.test.ts  composerDraftStore.ts  orchestrationEventEffects.test.ts  store.test.ts  store.ts  types.ts
apps/web/src/components/: ChatView.browser.tsx  ChatView.logic.ts  ChatView.tsx  KeybindingsToast.browser.tsx  Sidebar.tsx  desktopUpdate.logic.ts  (+1 more)
docs/superpowers/plans/: 2026-04-02-l6-remote-cli.md
skills/l6claw-browser-agent/: SKILL.md
tools/browser-agent/: .gitignore  README.md  pyproject.toml
tools/browser-agent/src/l6claw_browser_agent/: cli.py
(+28 files in other folders)
