[project]
name = "l6claw-browser-agent"
version = "0.1.0"
description = "Long-lived browser-use REPL for L6 Claw"
readme = "README.md"
authors = [{ name = "lachlan.stuart", email = "26366936+LachlanStuart@users.noreply.github.com" }]
requires-python = ">=3.12"
dependencies = ["browser-use>=0.12.6"]

[project.scripts]
l6claw-browser-agent = "l6claw_browser_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
